--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "functions": {
     "api/results.php": {
       "runtime": "vercel-php@0.6.0"
+    },
+    "api/ck.php": {
+      "runtime": "vercel-php@0.6.0"
     }
   }
 }
