--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,6 @@
 {
   "functions": {
-    "api/results.php": {
-      "runtime": "vercel-php@0.6.0"
-    },
-    "api/ck.php": {
-      "runtime": "vercel-php@0.6.0"
-    },
-    "api/ddns.php": {
+    "api/*.php": {
       "runtime": "vercel-php@0.6.0"
     }
   }
